--- a/Weather/css/main.css
+++ b/Weather/css/main.css
@@ -1,12 +1,18 @@
 @import "./reset.css";
 @import url(https://fonts.googleapis.com/css?family=Inter:300,regular,500,700);
 
+
+
 body {
+    background-image: url("https://kartinki.pibig.info/uploads/posts/2023-04/1680831580_kartinki-pibig-info-p-krasivie-kartinki-solnechnoi-pogodi-arti-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 50px;
 }
+
 
 
 .header {
@@ -17,7 +23,15 @@ body {
     padding-bottom: 51px;
     width: 100%;
     height: 200px;
-    background: black;
+    background: #0000004b;
+}
+.TeamName{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    color: white;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 35px;
 }
 
 .title {
@@ -75,7 +89,7 @@ body {
     row-gap: 20px;
 
     width: 599px;
-    background-color: #000000;
+    background-color: #0000004b;
     box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
 
