--- a/calc/css/style.css
+++ b/calc/css/style.css
@@ -1,4 +1,3 @@
-/* Задний план (Миша, я че знаю как написать?) */
 hr{
     color: black;
     height: 2px;
@@ -33,7 +32,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("image/calcimage.jpg");
+    background-image: url("../image/calcimage.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
